--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
                                              xmlns:tools="http://schemas.android.com/tools"
                                              android:layout_width="match_parent"
                                              android:layout_height="match_parent"
-                                             tools:context="jp.ishikota.cryptopreference.MainActivity"
+                                             tools:context="jp.ishikota.cryptopreference.sample.MainActivity"
         >
 
     <TextView
