--- a/sample/src/main/res/layout/activity_main.xml
+++ b/sample/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="jp.ishikota.cryptopreference.sample.MainActivity"
+        tools:context="jp.ishikota.cryptopreference.sample.ui.main.MainActivity"
         >
 
 </android.support.constraint.ConstraintLayout>
